tests/lean/empty_thm.lean.expected.out
empty_thm.lean:9:28: error: ':=', '.', command, script, or end-of-file expected
